manifests/workload/gateway/mcg-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: mcg-whereami-route
  namespace: istio-ingress
  labels:
    gateway: mcg-gw
spec:
  parentRefs:
  - kind: Gateway
    namespace: ha
    name: mcg-gw
  # hostnames:
  # - "testing.karankapoor.in"
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: istio-ingressgateway
      namespace: istio-ingress
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
